--- a/tools/u2boat/.deps/u2boat-u2boat.Po
+++ b/tools/u2boat/.deps/u2boat-u2boat.Po
@@ -9,8 +9,7 @@ u2boat-u2boat.o: u2boat.c /usr/include/stdio.h /usr/include/features.h \
   /usr/include/_G_config.h /usr/include/wchar.h \
   /usr/bin/../lib/clang/3.4/include/stdarg.h \
   /usr/include/x86_64-linux-gnu/bits/stdio_lim.h \
-  /usr/include/x86_64-linux-gnu/bits/sys_errlist.h \
-  /usr/include/x86_64-linux-gnu/bits/stdio.h /usr/include/stdlib.h \
+  /usr/include/x86_64-linux-gnu/bits/sys_errlist.h /usr/include/stdlib.h \
   /usr/include/x86_64-linux-gnu/bits/waitflags.h \
   /usr/include/x86_64-linux-gnu/bits/waitstatus.h /usr/include/endian.h \
   /usr/include/x86_64-linux-gnu/bits/endian.h \
@@ -24,15 +23,13 @@ u2boat-u2boat.o: u2boat.c /usr/include/stdio.h /usr/include/features.h \
   /usr/include/x86_64-linux-gnu/sys/sysmacros.h \
   /usr/include/x86_64-linux-gnu/bits/pthreadtypes.h \
   /usr/include/alloca.h \
-  /usr/include/x86_64-linux-gnu/bits/stdlib-bsearch.h \
   /usr/include/x86_64-linux-gnu/bits/stdlib-float.h /usr/include/ctype.h \
   /usr/include/xlocale.h /usr/include/unistd.h \
   /usr/include/x86_64-linux-gnu/bits/posix_opt.h \
   /usr/include/x86_64-linux-gnu/bits/environments.h \
   /usr/include/x86_64-linux-gnu/bits/confname.h \
   ../../src/sfutil/getopt.h ../../src/sfutil/getopt1.h \
-  /usr/include/string.h /usr/include/x86_64-linux-gnu/bits/string.h \
-  /usr/include/x86_64-linux-gnu/bits/string2.h /usr/include/errno.h \
+  /usr/include/string.h /usr/include/errno.h \
   /usr/include/x86_64-linux-gnu/bits/errno.h /usr/include/linux/errno.h \
   /usr/include/x86_64-linux-gnu/asm/errno.h \
   /usr/include/asm-generic/errno.h /usr/include/asm-generic/errno-base.h \
@@ -86,8 +83,6 @@ u2boat-u2boat.o: u2boat.c /usr/include/stdio.h /usr/include/features.h \
 
 /usr/include/x86_64-linux-gnu/bits/sys_errlist.h:
 
-/usr/include/x86_64-linux-gnu/bits/stdio.h:
-
 /usr/include/stdlib.h:
 
 /usr/include/x86_64-linux-gnu/bits/waitflags.h:
@@ -120,8 +115,6 @@ u2boat-u2boat.o: u2boat.c /usr/include/stdio.h /usr/include/features.h \
 
 /usr/include/alloca.h:
 
-/usr/include/x86_64-linux-gnu/bits/stdlib-bsearch.h:
-
 /usr/include/x86_64-linux-gnu/bits/stdlib-float.h:
 
 /usr/include/ctype.h:
@@ -141,10 +134,6 @@ u2boat-u2boat.o: u2boat.c /usr/include/stdio.h /usr/include/features.h \
 ../../src/sfutil/getopt1.h:
 
 /usr/include/string.h:
-
-/usr/include/x86_64-linux-gnu/bits/string.h:
-
-/usr/include/x86_64-linux-gnu/bits/string2.h:
 
 /usr/include/errno.h:
 
